[package]
name = "lpcontrol"
version = "0.1.0"
authors = ["Cassaundra <cass@cassaundra.io>"]
edition = "2018"

[[bin]]
name = "lpcontrold"
path = "src/bin/lpcontrold.rs"

[[bin]]
name = "lpcontrolc"
path = "src/bin/lpcontrolc.rs"

[dependencies]
clap = "2.32.0"
derive_more = "0.14.0"
launchpad = "0.1.1"
log = "0.4.6"
env_logger = "0.6.1"
num-traits = "0.2"
num-derive = "0.2"
rmp = "0.8.7"
rmp-serde = "0.13.7"
serde = "1.0.90"
palette = "0.4.1"